<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenAndroid"
    >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="356dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="377dp"
        android:adjustViewBounds="false"
        android:background="#4CAF50"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textbem_vindno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/bem_vindo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textprimeiro_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:text="@string/primeiro_app"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textmudaridioma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:text="@string/mudaridioma"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:visibility="visible" />

    <Button
        android:id="@+id/textspanish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="50dp"
        android:text="@string/espanhol"
        android:textAlignment="center"
        android:background="@drawable/botao_arredondado"
        android:textColor="@color/greenAndroid"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/textitalian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="160dp"
        android:text="@string/italiano"
        android:textAlignment="center"
        android:background="@drawable/botao_arredondado"
        android:textColor="@color/greenAndroid"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <Button
    android:id="@+id/textenglish"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="550dp"
    android:layout_marginLeft="270dp"
    android:text="@string/ingles"
    android:textAlignment="center"
    android:background="@drawable/botao_arredondado"
    android:textColor="@color/greenAndroid"
    android:textSize="16sp"
        />



</RelativeLayout>